estrutura jinja no htm

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <!--Index-->
     <div class="" style="height: 100vh;">
     <div class="title-home" >
-      <h1 class="text-center" style="color:yellow; font-size:90px;">ME AJUDE A ESTUDAR</h1>
+      <h1 class="text-center" style="color:yellow; font-size:90px;">{%block title%}ME AJUDE A ESTUDAR{%endblock%}</h1>
     </div>
     <div class="container" style="width: 100wh;">
       <div class="row justify-content-between" >
