--- a/templates/base.html
+++ b/templates/base.html
@@ -1,101 +1,105 @@
 <!doctype html>
 <html lang="en">
 
-<head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="../static/css/style.css">
-  <!-- Bootstrap CSS -->
-  <link href="../static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <script src="../static/bootstrap/js/jquery.min.js"></script>
-  <script src="../static/bootstrap/js/popper.min.js"></script>
-  <script src="../static/bootstrap/js/bootstrap.min.js"></script>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/login_style.css') }}" rel="stylesheet">
+    <!-- Bootstrap CSS -->
+    <link href="../static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <script src="../static/bootstrap/js/jquery.min.js"></script>
+    <script src="../static/bootstrap/js/popper.min.js"></script>
+    <script src="../static/bootstrap/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="./css/login_style.css">
 
-  <title></title>
-</head>
 
-<body style="background-color:#202124;">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <title>{%block title%}{%endblock%}</title>
+  </head>
 
-    <a class="navbar-brand px-5" href="#">
-      <img src="../static/img/icon/icon.png" width="40" height="40" class="d-inline-block align-top" alt="">
-      ME AJUDE A ESTUDAR
-    </a>
+  <body style="background-color:#202124;">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse px-5 justify-content-end" id="collapsibleNavbar">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="{{ url_for('index') }}">Home</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="{{ url_for('search') }}">Busca</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Sobre</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link " href="{{ url_for('contato') }}">Contato</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link " href="{{ url_for('parceiros') }}">Parceiros</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link " href="{{ url_for('login') }}">Login</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link " href="{{ url_for('signUp') }}">Sign up</a>
-        </li>
-      </ul>
+      <a class="navbar-brand px-5" href="#">
+        <img src="../static/img/icon/icon.png" width="40" height="40" class="d-inline-block align-top" alt="">
+        ME AJUDE A ESTUDAR
+      </a>
+
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse px-5 justify-content-end" id="collapsibleNavbar">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="{{ url_for('index') }}">Home</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="{{ url_for('search') }}">Busca</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Sobre</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " href="{{ url_for('contato') }}">Contato</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " href="{{ url_for('parceiros') }}">Parceiros</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " href="{{ url_for('login') }}">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " href="{{ url_for('signUp') }}">Sign up</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div>
+      {% block content %}
+
+      {% endblock %}
     </div>
-  </nav>
-  <div>
-    {% block content %}
-
-    {% endblock %}
-  </div>
 
 
-  <!-- Footer -->
-  <footer class="bg-dark text-center text-white mb-0">
-    <!-- Grid container -->
-    <div class="container p-4">
-      <!-- Section: Social media -->
-      <section class="mb-4">
-        <!-- Twitter -->
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-twitter"></i></a>
-
-        <!-- Instagram -->
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-instagram"></i></a>
-
-        <!-- Linkedin -->
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-linkedin-in"></i></a>
-
-      </section>
-      <!-- Section: Social media -->
-
-
+    <!-- Footer -->
+    <footer class="bg-dark text-center text-white mb-0">
+      <!-- Grid container -->
       <div class="container p-4">
-
+        <!-- Section: Social media -->
         <section class="mb-4">
-          <p>
-            Telefone:
-          </p>
-        </section>
+          <!-- Twitter -->
+          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-twitter"></i></a>
 
-        <!-- Copyright -->
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-          © 2021 Copyright:
-          <a class="text-white" href="#">MAE</a>
-        </div>
-        <!-- Copyright -->
-  </footer>
-  <!-- Footer -->
-  <script src="https://kit.fontawesome.com/0095b55143.js" crossorigin="anonymous"></script>
-  <script src="../static/bootstrap/js/bootstrap.bundle.min.js"></script>
-</body>
+          <!-- Instagram -->
+          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-instagram"></i></a>
+
+          <!-- Linkedin -->
+          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-linkedin-in"></i></a>
+
+        </section>
+        <!-- Section: Social media -->
+
+
+        <div class="container p-4">
+
+          <section class="mb-4">
+            <p>
+              Telefone:
+            </p>
+          </section>
+
+          <!-- Copyright -->
+          <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+            © 2021 Copyright:
+            <a class="text-white" href="#">MAE</a>
+          </div>
+          <!-- Copyright -->
+    </footer>
+    <!-- Footer -->
+    <script src="https://kit.fontawesome.com/0095b55143.js" crossorigin="anonymous"></script>
+    <script src="../static/bootstrap/js/bootstrap.bundle.min.js"></script>
+  </body>
 
 </html>
