--- a/templates/contato.html
+++ b/templates/contato.html
@@ -1,144 +1,51 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="../static/css/style.css">
-  <!-- Bootstrap CSS -->
-  <link href="../static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <script src="../static/bootstrap/js/jquery.min.js"></script>
-  <script src="../static/bootstrap/js/popper.min.js"></script>
-  <script src="../static/bootstrap/js/bootstrap.min.js"></script>
-
-  <title></title>
-</head>
-
-<body style="background-color:#202124;">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-2 mb-4">
-
-    <a class="navbar-brand px-5" href="#">
-      <img src="../static/img/icon/icon.png" width="40" height="40" class="d-inline-block align-top" alt="">
-      ME AJUDE A ESTUDAR
-    </a>
-
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse px-5 justify-content-end" id="collapsibleNavbar">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="search.html">Busca</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Sobre</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link " href="contato.html">Contato</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link " href="parceiros.html">Parceiros</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link " href="login.html">Login</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link " href="signUp.html">Sign up</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <!--section to html-->
-  <div>
-    <div class="container bg-blue" style="width: auto; height: auto; border-radius: 30px;">
-      <div class="row align-items-center mt-5 mb-5 bg-blue" style="border-radius: 30px;">
-        <div class="col-6 mx-auto mb-5">
-          <div class="col-md-12 fs mt-5">
-            <h1 class="fontWhite">Contato</h1>
-          </div>
-          <div class="d-flex justify-content-center">
-            <form class="row p-4 mt-5 h-100" method="post">
-              <div class="col-md-6">
-                <label for="inputName" class="form-label fontWhite fs f-bold">Nome</label>
-                <input type="text" class="form-control" id="inputName" name="inputName">
+{% extends 'base.html'%}
+{% block content%}
+<div>
+  <div class="container bg-blue" style="width: auto; height: auto; border-radius: 30px;">
+    <div class="row align-items-center mt-5 mb-5 bg-blue" style="border-radius: 30px;">
+      <div class="col-6 mx-auto mb-5">
+        <div class="col-md-12 fs mt-5">
+          <h1 class="fontWhite">{%block title%}Contato{%endblock%}</h1>
+        </div>
+        <div class="d-flex justify-content-center">
+          <form class="row p-4 mt-5 h-100" method="post">
+            <div class="col-md-6">
+              <label for="inputName" class="form-label fontWhite fs f-bold">Nome</label>
+              <input type="text" class="form-control" id="inputName" name="inputName">
+            </div>
+            <div class="col-md-6">
+              <label for="inputEmail" class="form-label fontWhite fs f-bold">Email</label>
+              <input type="email" class="form-control" id="inputEmail" name="inputEmail">
+            </div>
+            <div class="col-12">
+              <label for="inputCompany" class="form-label fontWhite fs f-bold">Assunto</label>
+              <input type="text" class="form-control" id="inputCompany" name="inputCompany" placeholder="Empresa">
+            </div>
+            <div class="col-md-6">
+              <label for="inputPhone" class="form-label fontWhite fs f-bold">Telefone</label>
+              <input type="text" class="form-control" id="inputPhone" name="inputPhone">
+            </div>
+            <div class="col-lg-6">
+              <label for="inputService" class="form-label fontWhite fs f-bold">Remetente</label>
+              <select id="inputService" class="form-select" name="inputService">
+                <option selected>Selecione um tipo...</option>
+              </select>
+            </div>
+            <div class="col-lg-6 mt-3">
+              <div class="form-floating">
+                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
+                                                                                  name="inputText" style="height: 100px"></textarea>
+                <label for="floatingTextarea">Comentário</label>
               </div>
-              <div class="col-md-6">
-                <label for="inputEmail" class="form-label fontWhite fs f-bold">Email</label>
-                <input type="email" class="form-control" id="inputEmail" name="inputEmail">
-              </div>
-              <div class="col-12">
-                <label for="inputCompany" class="form-label fontWhite fs f-bold">Assunto</label>
-                <input type="text" class="form-control" id="inputCompany" name="inputCompany" placeholder="Empresa">
-              </div>
-              <div class="col-md-6">
-                <label for="inputPhone" class="form-label fontWhite fs f-bold">Telefone</label>
-                <input type="text" class="form-control" id="inputPhone" name="inputPhone">
-              </div>
-              <div class="col-lg-6">
-                <label for="inputService" class="form-label fontWhite fs f-bold">Remetente</label>
-                <select id="inputService" class="form-select" name="inputService">
-                  <option selected>Selecione um tipo...</option>
-                </select>
-              </div>
-              <div class="col-lg-6 mt-3">
-                <div class="form-floating">
-                  <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
-                    name="inputText" style="height: 100px"></textarea>
-                  <label for="floatingTextarea">Comentário</label>
-                </div>
-              </div>
-              <div class="col-12 mt-3 mb-3">
-                <button type="submit" class="btn btn-primary">Enviar</button>
-              </div>
-            </form>
-          </div>
+            </div>
+            <div class="col-12 mt-3 mb-3">
+              <button type="submit" class="btn btn-primary">Enviar</button>
+            </div>
+          </form>
         </div>
       </div>
-
     </div>
 
-    <!-- Footer -->
-    <footer class="bg-dark text-center text-white mb-0">
-      <!-- Grid container -->
-      <div class="container p-4">
-        <!-- Section: Social media -->
-        <section class="mb-4">
-          <!-- Twitter -->
-          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-twitter"></i></a>
+  </div>
 
-          <!-- Instagram -->
-          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-instagram"></i></a>
-
-          <!-- Linkedin -->
-          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
-              class="fab fa-linkedin-in"></i></a>
-
-        </section>
-        <!-- Section: Social media -->
-
-
-        <div class="container p-4">
-
-          <section class="mb-4">
-            <p>
-              Telefone:
-            </p>
-          </section>
-
-          <!-- Copyright -->
-          <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-            © 2021 Copyright:
-            <a class="text-white" href="#">MAE</a>
-          </div>
-          <!-- Copyright -->
-    </footer>
-    <!-- Footer -->
-    <script src="https://kit.fontawesome.com/0095b55143.js" crossorigin="anonymous"></script>
-    <script src="../static/bootstrap/js/bootstrap.bundle.min.js"></script>
-</body>
-
-</html>
+  {%endblock%}
