--- a/templates/parceiros.html
+++ b/templates/parceiros.html
@@ -1,103 +1,9 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="../static/css/style.css">
-    <!-- Bootstrap CSS -->
-    <link href="../static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <script src="../static/bootstrap/js/jquery.min.js"></script>
-    <script src="../static/bootstrap/js/popper.min.js"></script>
-    <script src="../static/bootstrap/js/bootstrap.min.js"></script>
-
-    <title></title>
-</head>
-
-<body style="background-color:#202124;">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-2 mb-4">
-
-        <a class="navbar-brand px-5" href="#">
-            <img src="../static/img/icon/icon.png" width="40" height="40" class="d-inline-block align-top" alt="">
-            ME AJUDE A ESTUDAR
-        </a>
-
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse px-5 justify-content-end" id="collapsibleNavbar">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="search.html">Busca</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Sobre</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link " href="contato.html">Contato</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link " href="parceiros.html">Parceiros</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link " href="login.html">Login</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link " href="signUp.html">Sign up</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <!--section to html-->
+{% extends 'base.html'%}
+{% block content%}
+ <!--section to html-->
     <div>
-        <h1 class="fontWhite">Parceiros</h1>
+        <h1 class="fontWhite">{%block title%}Parceiros{%endblock%}</h1>
 
     </div>
 
-    <!-- Footer -->
-    <footer class="bg-dark text-center text-white mb-0">
-        <!-- Grid container -->
-        <div class="container p-4">
-            <!-- Section: Social media -->
-            <section class="mb-4">
-                <!-- Twitter -->
-                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
-                        class="fab fa-twitter"></i></a>
-
-                <!-- Instagram -->
-                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
-                        class="fab fa-instagram"></i></a>
-
-                <!-- Linkedin -->
-                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
-                        class="fab fa-linkedin-in"></i></a>
-
-            </section>
-            <!-- Section: Social media -->
-
-
-            <div class="container p-4">
-
-                <section class="mb-4">
-                    <p>
-                        Telefone:
-                    </p>
-                </section>
-
-                <!-- Copyright -->
-                <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-                    © 2021 Copyright:
-                    <a class="text-white" href="#">MAE</a>
-                </div>
-                <!-- Copyright -->
-    </footer>
-    <!-- Footer -->
-    <script src="https://kit.fontawesome.com/0095b55143.js" crossorigin="anonymous"></script>
-    <script src="../static/bootstrap/js/bootstrap.bundle.min.js"></script>
-</body>
-
-</html>
+{%endblock%}
