--- a/templates/signUp.html
+++ b/templates/signUp.html
@@ -22,7 +22,7 @@
         </div>
         <div class="d-flex justify-content-between">
             <div class="form-check"> <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                <label class="form-check-label" for="flexCheckDefault"> Keep me Logged in </label>
+                <label class="form-check-label" for="flexCheckDefault"> Continuar logado. </label>
             </div>
 
         </div>
