--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 {%block content%}
     <!--section to html-->
     <div class="container d-flex justify-content-center align-items-center mb-5 geral" >
-        <div class="card">
+        <div class="card mt-5">
             <div class="text-center intro"> <img src="../static/img/SVG/icon_log.svg" width="160"> <span
                     class="d-block account">Don't have account yet?</span> <span class="contact"><a
                     href="signUp.html" class="mail"> Create Account now</a></span>
