--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,25 @@
 {% extends 'base.html' %}
 {% block content %}
-<div>
-    <!--Index-->
-    <div class="" style="height: 100vh;">
-    <div class="title-home" >
-      <h1 class="text-center" style="color:yellow; font-size:90px;">{%block title%}ME AJUDE A ESTUDAR{%endblock%}</h1>
-    </div>
-    <div class="container" style="width: 100wh;">
-      <div class="row justify-content-between" >
-        <div class="col imgs mgrl" style="margin-top: 0;">
-          <img class="mgrl" src="../static/img/SVG/moonGirl.svg" alt="moon girl">
-        </div>
-        <div class="col imgs rckt">
-          <img class="rckt" src="../static/img/SVG/rocket.svg" alt="rocket">
-        </div>
+<div class="container indexScreen">
+  <!--Index-->
+  <div class="title-home" >
+    <h1 class="text-center fsize" style="color:yellow; font-size:90px;">{%block title%}ME AJUDE A ESTUDAR{%endblock%}</h1>
+  </div>
+  <div class="container" style="width: 100wh;">
+    <div class="row justify-content-between" >
+      <div class="col imgs mgrl" style="margin-top: 0;">
+        <img class="mgrl" src="../static/img/SVG/moonGirl.svg" alt="moon girl">
+      </div>
+      <div class="col imgs rckt">
+        <img class="rckt" src="../static/img/SVG/rocket.svg" alt="rocket">
       </div>
     </div>
   </div>
+  <div class="container p-4 mt-5 fsizesobre">
+    <p class="text-jutify">Nós somos a pygmy, nascemos com a intenção de querer ajudar pessoas através da tecnologia inclusiva. Criando uma ponte entre empresas e pessoas que querem aprender, e começar uma nova carreira na área da tecnologia.
+      Focando principalmente em jovens em situação de vulnerabilidade social.
+      A pygmy conecta você com o futuro.
+    </p>
   </div>
+</div>
 {% endblock %}
