--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
   <body style="background-color:#202124;">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
-      <a class="navbar-brand px-5" href="#">
+      <a class="navbar-brand px-5" href="{{ url_for('index') }}">
         <img src="../static/img/icon/icon.png" width="40" height="40" class="d-inline-block align-top" alt="">
         ME AJUDE A ESTUDAR
       </a>
