--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
       <div class="collapse navbar-collapse px-5 justify-content-end" id="collapsibleNavbar">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="{{ url_for('index') }}">Home</a>
+            <a class="nav-link" href="{{ url_for('index') }}">Inicio</a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="{{ url_for('search') }}">Busca</a>
@@ -47,12 +47,12 @@
           <li class="nav-item">
             <a class="nav-link " href="{{ url_for('parceiros') }}">Parceiros</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link " href="{{ url_for('login') }}">Login</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link " href="{{ url_for('signUp') }}">Sign up</a>
-          </li>
+{#          <li class="nav-item">#}
+{#            <a class="nav-link " href="{{ url_for('login') }}">Login</a>#}
+{#          </li>#}
+{#          <li class="nav-item">#}
+{#            <a class="nav-link " href="{{ url_for('signUp') }}">Sign up</a>#}
+{#          </li>#}
         </ul>
       </div>
     </nav>
