--- a/templates/signUp.html
+++ b/templates/signUp.html
@@ -4,7 +4,7 @@
 
 <div class="container d-flex justify-content-center align-items-center mb-5 mt-5 geral">
     <div class="card">
-        <form>
+        <form method="post">
             <div class="text-center intro"> <img src="../static/img/SVG/icon_signup.svg" width="200">
             </div>
             <div class="mt-4 text-center">
@@ -17,7 +17,7 @@
                     <label>Aluno</label>
                     <div class="mt-3 inputbox"> <input type="email" class="form-control" name="email" placeholder="Email"> </div>
                     <div class="inputbox"> <input type="password" class="form-control" name="password" placeholder="Password">  </div>
-                    <div class="inputbox"> <input type="password" class="form-control" name="confirm_passwordpassword" placeholder="Confirm Password">  </div>
+                    <div class="inputbox"> <input type="password" class="form-control" name="confirm_password" placeholder="Confirm Password">  </div>
                     <div class="inputbox"> <input type="text" class="form-control" name="cpf" placeholder="CPF">  </div>
                     <div class="inputbox"> <input type="text" class="form-control" name="name" placeholder="Nome">  </div>
                     <div class="inputbox"> <input type="text" class="form-control" name="lastname" placeholder="Sobrenome">  </div>
@@ -26,7 +26,7 @@
                     <label>Empresa</label>
                     <div class="mt-3 inputbox"> <input type="email" class="form-control" name="email" placeholder="Email"> </div>
                     <div class="inputbox"> <input type="password" class="form-control" name="password" placeholder="Password">  </div>
-                    <div class="inputbox"> <input type="password" class="form-control" name="confirm_passwordpassword" placeholder="Confirm Password">  </div>
+                    <div class="inputbox"> <input type="password" class="form-control" name="confirm_password" placeholder="Confirm Password">  </div>
                     <div class="inputbox"> <input type="text" class="form-control" name="cpf" placeholder="CPF">  </div>
                     <div class="inputbox"> <input type="text" class="form-control" name="name" placeholder="Nome">  </div>
                     <div class="inputbox"> <input type="text" class="form-control" name="lastname" placeholder="Sobrenome">  </div>
