--- a/templates/search.html
+++ b/templates/search.html
@@ -9,9 +9,9 @@
     <div class="input-group rounded p-5 search-obj ">
       <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
                                                                              aria-describedby="search-addon" />
-      <span class="input-group-text border-0 yllw" id="search-addon">
+      <button class="input-group-text border-0 yllw" id="search-addon">
         <i class="fas fa-search"></i>
-      </span>
+      </button>
     </div>
   </div>
 </div>
