melhorando tempalte do email

--- a/templates/contato.html
+++ b/templates/contato.html
@@ -16,27 +16,27 @@
         <div class="d-flex justify-content-center">
           <form class="row p-4 mt-5 h-100" method="post">
             <div class="col-md-6">
-              <label for="inputName" class="form-label fontWhite fs f-bold">Nome</label>
+              <label for="inputName" class="form-label fontWhite fs f-bold">Nome da Empresa</label>
               <input type="text" class="form-control" id="inputName" name="inputName">
             </div>
             <div class="col-md-6">
-              <label for="inputEmail" class="form-label fontWhite fs f-bold">Email</label>
+              <label for="inputEmail" class="form-label fontWhite fs f-bold">Email para contato</label>
               <input type="email" class="form-control" id="inputEmail" name="inputEmail">
             </div>
-            <div class="col-12">
-              <label for="inputCompany" class="form-label fontWhite fs f-bold">Assunto</label>
-              <input type="text" class="form-control" id="inputCompany" name="inputCompany" placeholder="Empresa">
-            </div>
+{#            <div class="col-12">#}
+{#              <label for="inputCompany" class="form-label fontWhite fs f-bold">Assunto</label>#}
+{#              <input type="text" class="form-control" id="inputCompany" name="inputCompany" placeholder="Empresa">#}
+{#            </div>#}
             <div class="col-md-6">
               <label for="inputPhone" class="form-label fontWhite fs f-bold">Telefone</label>
               <input type="text" class="form-control" id="inputPhone" name="inputPhone">
             </div>
-            <div class="col-lg-6">
-              <label for="inputService" class="form-label fontWhite fs f-bold">Remetente</label>
-              <select id="inputService" class="form-select" name="inputService">
-                <option selected>Selecione um tipo...</option>
-              </select>
-            </div>
+{#            <div class="col-lg-6">#}
+{#              <label for="inputService" class="form-label fontWhite fs f-bold">Remetente</label>#}
+{#              <select id="inputService" class="form-select" name="inputService">#}
+{#                <option selected>Selecione um tipo...</option>#}
+{#              </select>#}
+{#            </div>#}
             <div class="col-lg-6 mt-3">
               <div class="form-floating">
                 <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
