--- a/templates/contato.html
+++ b/templates/contato.html
@@ -37,11 +37,12 @@
 {#                <option selected>Selecione um tipo...</option>#}
 {#              </select>#}
 {#            </div>#}
-            <div class="col-lg-6 mt-3">
+            <div class="col-lg-12 mt-3">
               <div class="form-floating">
+
                 <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
                                                                                   name="inputText" style="height: 100px"></textarea>
-                <label for="floatingTextarea">Comentário</label>
+                <label for="floatingTextarea2">Fale sobre você</label>
               </div>
             </div>
             <div class="col-12 mt-3 mb-3">
