--- a/templates/base.html
+++ b/templates/base.html
@@ -38,15 +38,15 @@
           <li class="nav-item active">
             <a class="nav-link" href="{{ url_for('search') }}">Busca</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Sobre</a>
-          </li>
+{#          <li class="nav-item">#}
+{#            <a class="nav-link" href="#">Sobre</a>#}
+{#          </li>#}
           <li class="nav-item">
             <a class="nav-link " href="{{ url_for('contato') }}">Contato</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link " href="{{ url_for('parceiros') }}">Parceiros</a>
-          </li>
+{#          <li class="nav-item">#}
+{#            <a class="nav-link " href="{{ url_for('parceiros') }}">Parceiros</a>#}
+{#          </li>#}
 {#          <li class="nav-item">#}
 {#            <a class="nav-link " href="{{ url_for('login') }}">Login</a>#}
 {#          </li>#}
