--- a/static/css/style.css
+++ b/static/css/style.css
@@ -125,7 +125,10 @@ html, body {height:100%;}
   bottom:0;
   width:100%;
 }
-
+.pop-up-mapa-txt{
+  font-family: 'Roboto', sans-serif;
+  
+}
 @media only screen and (max-width: 600px) {
   .mgrl {
     width: 100%;
